Cleaned up some compiler warnings in ImageHelper.java